<resources>
    <string name="app_name">Calculator</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn0">0</string>
    <string name="btnDot">.</string>
    <string name="btnMult">*</string>
    <string name="btnDevide">/</string>
    <string name="btnPlus">+</string>
    <string name="btnMinus">-</string>
    <string name="btnCancel">C</string>
    <string name="btnEqual">=</string>
    <string name="btnSqrt">√</string>
    <string name="btnExponent">^</string>
    <string name="btnBack"><![CDATA[<|]]></string>
    <string name="btnPercent">%</string>
    <string name="btnChangeSign">+/-</string>
    <string name="btnReverseNum">1/x</string>
    <string name="btnPi">π</string>
</resources>
