<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/Pane"
        android:textSize="@dimen/pane_text_size" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnChangeSign"
            android:id="@+id/buttonChangeSign"
            android:layout_weight="1"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnReverseNum"
            android:id="@+id/buttonReverseNum"
            android:layout_weight="1"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonPi"
            android:layout_weight="1"
            android:text="@string/btnPi"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCancel"
            android:id="@+id/buttonCancel"
            android:layout_weight="1"
            android:textSize="@dimen/button_text_size" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnExponent"
            android:id="@+id/buttonExponent"
            android:layout_weight="1"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSqrt"
            android:id="@+id/buttonSqrt"
            android:layout_weight="1"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnPercent"
            android:id="@+id/buttonPercent"
            android:layout_weight="1"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnBack"
            android:id="@+id/buttonBack"
            android:layout_weight="1"
            android:textSize="@dimen/button_text_size" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn7"
            android:id="@+id/button7"
            android:layout_weight="1"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn8"
            android:id="@+id/button8"
            android:layout_weight="1"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn9"
            android:id="@+id/button9"
            android:layout_weight="1"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnPlus"
            android:id="@+id/buttonPlus"
            android:layout_weight="1"
            android:textSize="@dimen/button_text_size" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn4"
            android:id="@+id/button4"
            android:layout_weight="1"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn5"
            android:id="@+id/button5"
            android:layout_weight="1"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn6"
            android:id="@+id/button6"
            android:layout_weight="1"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnMinus"
            android:id="@+id/buttonMinus"
            android:layout_weight="1"
            android:textSize="@dimen/button_text_size" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn1"
            android:id="@+id/button1"
            android:layout_weight="1"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn2"
            android:id="@+id/button2"
            android:layout_weight="1"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn3"
            android:id="@+id/button3"
            android:layout_weight="1"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnMult"
            android:id="@+id/buttonMultiply"
            android:layout_weight="1"
            android:textSize="@dimen/button_text_size" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnEqual"
            android:id="@+id/buttonEqual"
            android:layout_weight="1"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn0"
            android:id="@+id/button0"
            android:layout_weight="1"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDot"
            android:id="@+id/buttonDot"
            android:layout_weight="1"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDevide"
            android:id="@+id/buttonDevide"
            android:layout_weight="1"
            android:textSize="@dimen/button_text_size" />
    </LinearLayout>
</LinearLayout>